// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of the user form component should render correctly on sign up 1`] = `
<form
  className="py-1"
  onSubmit={[MockFunction]}
>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="form-control"
      id="username"
      minLength={2}
      name="username"
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Test Dev"
    />
  </div>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="email"
    >
      Email
    </label>
    <input
      className="form-control"
      id="email"
      name="email"
      onChange={[MockFunction]}
      required={true}
      type="email"
      value="testdev@email.com"
    />
  </div>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="form-control"
      id="password"
      minLength={6}
      name="password"
      onChange={[MockFunction]}
      required={true}
      type="password"
      value="testing101"
    />
  </div>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="passwordConfirmation"
    >
      Password Confirmation
    </label>
    <input
      className="form-control"
      id="passwordConfirmation"
      minLength={6}
      name="password_confirmation"
      onChange={[MockFunction]}
      required={true}
      type="password"
      value="testing101"
    />
  </div>
  <div>
    <button
      className="mb-3 w-100 btn btn-primary"
      disabled={false}
      type="submit"
    >
      Sign up
    </button>
    <p
      className="text-center"
    >
      <small
        className="form-text"
      >
        Already have an account? 
        <a
          href="/login"
          onClick={[Function]}
        >
          Log in
        </a>
      </small>
    </p>
  </div>
</form>
`;

exports[`Snapshot of the user form component should render edit form correctly if logged in 1`] = `
<form
  className="py-3"
  onSubmit={[MockFunction]}
>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="form-control"
      id="username"
      minLength={2}
      name="username"
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Test Dev"
    />
  </div>
  <div
    className="mb-3"
  >
    <label
      className="form-label"
      htmlFor="email"
    >
      Email
    </label>
    <input
      className="form-control"
      id="email"
      name="email"
      onChange={[MockFunction]}
      required={true}
      type="email"
      value="testdev@email.com"
    />
  </div>
  <button
    className="w-100 btn btn-primary"
    disabled={false}
    type="submit"
  >
    Update Profile
  </button>
</form>
`;
